--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -131,6 +131,14 @@ color: $burgundy !important;
   h5 {
     text-align: center;
   }
+  .fa-sun {
+    color: #ff6600;
+    font-size: 24px;
+  }
+  .fa-cloud-sun {
+    color: #b9a7e4;
+    font-size: 24px;
+  }
 }
 
 .card-crops-show-return-link {
