fixed the position of the star on crops#show  as well

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -74,7 +74,9 @@ color: $burgundy !important;
 
 .favorite-star-show {
   position: absolute;
-  left: 295px;
+  z-index: 2;
+  left: 296px;
+  top: 8px;
 }
 
 .card-crops-show {
