--- a/app/views/gardens/_selected_plot.js.erb
+++ b/app/views/gardens/_selected_plot.js.erb
@@ -1,19 +1,24 @@
 <div class="card-widget">
   <%= image_tag(tile.plot.crop.image_url) %>
   <p><%= tile.plot.crop.name %></p>
-  <% if (tile.plot.crop.min_days_to_harvest - (Date.today.to_date - tile.plot.created_at.to_date).to_i) > 0 %>
+  <% if tile.plot.crop.min_days_to_harvest - (Date.today.to_date - tile.plot.created_at.to_date).to_i > 0 %>
     <p><%= pluralize(tile.plot.crop.min_days_to_harvest - (Date.today.to_date - tile.plot.created_at.to_date).to_i, 'days') %> till harvest</p>
+  <% elsif tile.plot.crop.crop_type == "Fruit" %>
+    <p>HARVESTABLE</p>
   <% else %>
   <%# Harvest method %>
-    <p>HARVEST</p>
+    <%= form_with(url: plot_path(tile.plot), method: 'DELETE') do |f| %>
+      <%= f.hidden_field(:plot_id, value: tile.plot.id) %>
+      <%= f.submit "Harvest", class: 'btn btn-success btn-gardens', data: { harvest_id: "harvest-#{tile.plot.id}" } %>
+    <% end %>
   <% end %>
     <small><%= tile.plot.created_at.strftime("Planted %b %d.") %></small>
   <%# Water method %>
-  <%= form_with(url: plot_path(tile.plot), method: 'PATCH') do |f| %>
-    <%= f.hidden_field(:plot_id, value: tile.plot.id) %>
+  <%= form_with(url: plot_path(tile.plot), local: true, method: 'PATCH') do |f| %>
+    <%= f.hidden_field(:days_since_watering, value: 0) %>
     <%= f.submit "Submit", class: 'd-none', data: { water_id: "water-#{tile.plot.id}" } %>
   <% end %>
-  <% if tile.plot.crop.water_needs >= tile.plot.days_since_watering %>
+  <% if tile.plot.days_since_watering >= tile.plot.crop.water_needs %>
     <%= image_tag "droplet.png", class: "droplet", data: { action: "click->tile-container#water", water_id: "#{tile.plot.id}" } %>
   <% end %>
 </div>
