--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -13,11 +13,9 @@
         <div class="form-container-gardens" data-tile-container-target="form">
           <%= simple_form_for [@garden, @plot] do |f| %>
             <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Recommended" %>
-            <%= f.input :tiles, :input_html => { data: { "tile-container-target": "input" } } %>
-            <%# :as => :hidden %>
+            <%= f.input :tiles, as: :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
             <%= f.submit "Create plot", class: 'btn btn-primary btn-gardens' %>
           <% end %>
-        <%# This will re-render on tile/plot selection %>
         </div>
       <div id="selected-tile" data-tile-container-target="selected-plot">
       </div>
