home#page wording and styling change

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,7 +13,7 @@ $font-size-base: 1rem;
 $body-color: $gray;
 $primary:    $moss;
 $success:    $asparagus;
-$info:       $yellow;
+$info:       $weak-yolk;
 $danger:     $burgundy;
 $warning:    $tangerine;
 
