Change the days_since_watering column in plots to date type

--- a/app/views/gardens/_tile.html.erb
+++ b/app/views/gardens/_tile.html.erb
@@ -4,7 +4,7 @@
   <div class="tile" id="<%= tile.id %>" data-plot-id="<%= tile.plot_id %>" data-crop-name="<%= tile.plot.crop.name if tile.plot_id.present? %>" data-tile-container-target="tile" data-action='click->tile-container#displaySelectedTile'>
     <% if tile.plot_id.present? %>
       <%= image_tag tile.plot.crop.image_url %>
-      <% if tile.plot.days_since_watering >= tile.plot.crop.water_needs %>
+      <% if ((Time.now.to_date - tile.plot.days_since_watering.to_date).to_i >= tile.plot.crop.water_needs) %>
         <%= image_tag "droplet.png", class: "droplet", data: { plot_need_water_id: "drop-#{tile.plot.id}"} %>
       <% end %>
     <% end %>
