--- a/app/views/gardens/_selected_plot.js.erb
+++ b/app/views/gardens/_selected_plot.js.erb
@@ -6,19 +6,19 @@
   <% elsif tile.plot.crop.crop_type == "Fruit" %>
     <p>HARVESTABLE</p>
   <% else %>
-  <%# Harvest method %>
+    <%# Harvest method %>
     <%= form_with(url: plot_path(tile.plot), method: 'DELETE') do |f| %>
       <%= f.hidden_field(:plot_id, value: tile.plot.id) %>
       <%= f.submit "Harvest", class: 'btn btn-success btn-gardens', data: { harvest_id: "harvest-#{tile.plot.id}" } %>
     <% end %>
   <% end %>
-    <small><%= tile.plot.created_at.strftime("Planted %b %d.") %></small>
+  <small><%= tile.plot.created_at.strftime("Planted %b %d.") %></small>
   <%# Water method %>
   <%= form_with(url: plot_path(tile.plot), local: true, method: 'PATCH') do |f| %>
-    <%= f.hidden_field(:days_since_watering, value: 0) %>
+    <%= f.hidden_field(:days_since_watering, value: Time.now) %>
     <%= f.submit "Submit", class: 'd-none', data: { water_id: "water-#{tile.plot.id}" } %>
   <% end %>
-  <% if tile.plot.days_since_watering >= tile.plot.crop.water_needs %>
+  <% if ((Time.now.to_date - tile.plot.days_since_watering.to_date).to_i >= tile.plot.crop.water_needs) %>
     <%= image_tag "droplet.png", class: "droplet", data: { action: "click->tile-container#water", water_id: "#{tile.plot.id}" } %>
   <% end %>
 </div>
