--- a/app/views/gardens/_selected_plot.js.erb
+++ b/app/views/gardens/_selected_plot.js.erb
@@ -16,7 +16,7 @@
     <% if days_left > 0 %>
       <p><strong><%= pluralize(days_left, 'days') %></strong> until <strong>harvest</strong></p>
     <% else %>
-    <%= form_with(url: plot_path(tile.plot), method: 'DELETE') do |f| %>
+    <%= form_with(url: plot_path(tile.plot), local: true, method: :delete) do |f| %>
         <%= f.hidden_field(:plot_id, value: tile.plot.id) %>
         <%= f.submit "Harvest", class: 'btn btn-success btn-gardens', data: { harvest_id: "harvest-#{tile.plot.id}" } %>
       <% end %>
