--- a/app/views/crops/_search_bar_crops.html.erb
+++ b/app/views/crops/_search_bar_crops.html.erb
@@ -1,9 +1,13 @@
-<%= form_tag crops_path, method: :get do %>
+  <%= form_tag crops_path, method: :get, class: 'input-group py-3' do %>
   <%= text_field_tag :query,
     params[:query],
-    class: "form-control",
+    class: "form-control border border-primary",
     data: { behavior: "autocomplete" },
     placeholder: "Find your crops by name..."
   %>
-  <%= submit_tag "Search", class: "btn btn-primary w-100" %>
+  <div class="input-group-append">
+    <%= button_tag(class: "btn btn-outline-primary") do %>
+      <i class="fas fa-search"></i>
+    <% end %>
+  </div>
 <% end %>
