--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="banner">
   <div class="banner-content text-center">
     <h1>Grow fresh vegetables now!</h1>
-    <p>Check the vegetables recomended to grow in your area</p>
+    <p>Check the vegetables recommended to grow in your area</p>
     <%= link_to "Start Growing", crops_path, class: "btn btn-info"%>
   </div>
 </div>
