--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 8px;
+  padding: 10px 50px;
 
 }
 
@@ -18,18 +18,30 @@
   color: white;
   text-decoration: none;
   font-size: 16px;
-  padding: 18px 8px;
+  padding: 38px 8px;
 }
 
 .footer-link {
-  border: 1px solid red;
   width: 120px;
   height: 60px;
   border-radius: 45px;
   padding: 12px;
   font-size: 16px;
-  li {
-    font-size: 12px;
-    list-style-type: none;
-  }
+  margin: 0px 1px;
+  // li {
+  //   font-size: 12px;
+  //   list-style-type: none;
+  //   padding-top: 8px;
+  // }
+}
+
+.crop-container-img {
+  position: relative;
+}
+
+.footer-img {
+  width: 50px;
+  position: absolute;
+  left: 38px;
+  top: 3px;
 }
