footer is sticky now....probably

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,6 +4,10 @@
   padding: 0px;
   color: rgba(0,0,0,0.3);
   margin-top: 16px;
+  position: sticky;
+  bottom: 0px;
+  z-index: 3;
+  border-radius: 25px 25px 0px 0px;
 }
 
 .footer-links {
@@ -18,22 +22,31 @@
   color: white;
   text-decoration: none;
   font-size: 16px;
-  padding: 38px 8px;
+  padding: 10px 8px;
 }
 
 .footer-link {
   width: 120px;
-  height: 60px;
+  height: 70px;
   border-radius: 45px;
-  padding: 12px;
+  padding: 35px;
   font-size: 16px;
   margin: 0px 1px;
-  // li {
-  //   font-size: 12px;
-  //   list-style-type: none;
-  //   padding-top: 8px;
-  // }
+  position: relative;
+  .footer-gardens-word {
+    position: absolute;
+    margin-bottom: 0px;
+    bottom: 2px;
+    left: 28px
+  }
+  .footer-crops-word {
+    position: absolute;
+    margin-bottom: 0px;
+    bottom: 2px;
+    left: 36px;
+  }
 }
+
 
 .crop-container-img {
   position: relative;
@@ -42,6 +55,7 @@
 .footer-img {
   width: 50px;
   position: absolute;
-  left: 38px;
+  left: 36px;
   top: 3px;
+  z-index: 1;
 }
