--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,16 @@
 <div class="footer">
   <div class="footer-links">
-    <div class="crop-container-img">
-      <%= image_tag 'gardensindex', class: 'footer-img' %>
-      <div><%= link_to "Gardens", gardens_path, class: 'btn btn-primary footer-link' %></div>
-    </div>
-    <div class="crop-container-img">
-      <%= image_tag 'cropsindex', class: 'footer-img' %>
-      <%= link_to "Crops", crops_path, class: 'btn btn-primary footer-link' %>
-    </div>
+    <%= link_to gardens_path do %>
+      <div class="crop-container-img">
+        <%= image_tag 'gardensindex', class: 'footer-img' %>
+        <div class="btn btn-primary footer-link"><p class="footer-gardens-word">Gardens</p></div>
+      </div>
+    <% end %>
+    <%= link_to crops_path do %>
+      <div class="crop-container-img">
+        <%= image_tag 'cropsindex', class: 'footer-img' %>
+        <div class="btn btn-primary footer-link"><p class="footer-crops-word">Crops</p></div>
+      </div>
+    <% end %>
    </div>
 </div>
