--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -55,7 +55,7 @@
 .favorite-counter {
   position: absolute;
   text-align: center;
-  background-color: $burgundy;
+  background-color: #ff6600;
   height: 24px;
   width: 24px;
   border-radius: 50%;
