--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -31,4 +31,4 @@
     </div>
   </div>
 </div>
-<%= render 'shared/footer', favorite: @favorites %>
+<%= render 'shared/footer', favorite: @favorites.count %>
