FIxed a bug when the badge background would show when the favorite count is 0

--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -36,4 +36,6 @@
     </div>
   <% end %>
 <% end %>
-<%= render 'shared/footer', favorite: current_user.favorites_by_type('Crop').count %>
+<div data-controller="mark-crops">
+  <%= render 'shared/footer', favorite: current_user.favorites_by_type('Crop').count %>
+</div>
