--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -31,4 +31,6 @@
     </div>
   </div>
 </div>
-<%= render 'shared/footer', favorite: @favorites.count %>
+<div data-controller="mark-crops">
+  <%= render 'shared/footer', favorite: @favorites.count %>
+</div>
