--- a/app/views/crops/show.html.erb
+++ b/app/views/crops/show.html.erb
@@ -1,64 +1,66 @@
-<div class="card-crops-show-body">
-  <%= link_to "#{crops_path}##{@crop.name.gsub(" ", "_")}" do %>
-    <div class="card-crops-show-return-link">
-      <i class="far fa-arrow-alt-circle-left"></i>
-    </div>
-  <% end %>
-  <div class="card-crops-show">
-    <div class="favorite-star-show" data-controller="mark-favorite-crop">
-      <%= link_to toggle_favorite_crop_path(@crop), remote: true, method: "PATCH" do %>
-        <div class="<%= current_user.favorited?(@crop) ? "star marked" : "star" %>" data-action="click->mark-favorite-crop#mark">
-          <i class="fas fa-star"></i>
+<div data-controller="mark-crops">
+  <div class="card-crops-show-body">
+    <%= link_to "#{crops_path}##{@crop.name.gsub(" ", "_")}" do %>
+      <div class="card-crops-show-return-link">
+        <i class="far fa-arrow-alt-circle-left"></i>
+      </div>
+    <% end %>
+    <div class="card-crops-show">
+      <div class="favorite-star-show">
+        <%= link_to toggle_favorite_crop_path(@crop), remote: true, method: "PATCH" do %>
+          <div class="<%= current_user.favorited?(@crop) ? "star marked" : "star" %>" data-action="click->mark-crops#mark">
+            <i class="fas fa-star"></i>
+          </div>
+        <% end %>
+      </div>
+      <h1><%= @crop.name %></h1>
+      <div class="card-crops-show-img">
+        <%= image_tag @crop.image_url %>
+      </div>
+      <div class="card-crops-show-plant-family">
+        <div class="card-crops-show-plant-perennial">
+          <% if ["Ericaceae", "Passifloraceae", "Lamiaceae", "Asparagaceae", "Rosaceae", "Grossulariaceae"].include?(@crop.plant_family) %>
+            <p>Grows Every Year</p>
+          <% else %>
+            <p>Grows Once</p>
+          <% end %>
         </div>
-      <% end %>
+        <p class="crop-plant-family"><em><%= @crop.plant_family %></em></p>
+      </div>
+      <div class="card-crops-show-white-container">
+        <h5>Needs</h5>
+        <div class="card-crops-show-bottom-details">
+          <p>Water:</p>
+          <p>Every <%= @crop.water_needs %> days</p>
+        </div>
+        <div class="card-crops-show-bottom-details">
+          <p>Nitrogen:</p>
+          <p><%= @crop.nitrogen_needs %></p>
+        </div>
+        <div class="card-crops-show-bottom-details">
+          <p>Sun Exposure:</p>
+          <% if @crop.sun_exposure == "Full Sun" %>
+            <p><i class="fas fa-sun"></i></p>
+          <% else %>
+            <p><i class="fas fa-cloud-sun"></i></p>
+          <% end %>
+        </div>
+        <div class="card-crops-show-bottom-details">
+          <p>Crop Spacing:</p>
+          <p><%= @crop.spacing_in_cm %> cm</p>
+        </div>
+        <div class="card-crops-show-bottom-details">
+          <p>Sowing Months:</p>
+          <p><%= @crop.sowing_months %></p>
+        </div>
+        <%#= this one should be another div with water use %>
+      </div>
+      <div class="card-crops-show-description">
+        <p><%= @crop.description %></p>
+      </div>
+      <%#= put recommended stuff together in another color %>
+      <%#= add the recommended sowing months as well %>
     </div>
-    <h1><%= @crop.name %></h1>
-    <div class="card-crops-show-img">
-      <%= image_tag @crop.image_url %>
-    </div>
-    <div class="card-crops-show-plant-family">
-      <div class="card-crops-show-plant-perennial">
-        <% if ["Ericaceae", "Passifloraceae", "Lamiaceae", "Asparagaceae", "Rosaceae", "Grossulariaceae"].include?(@crop.plant_family) %>
-          <p>Grows Every Year</p>
-        <% else %>
-          <p>Grows Once</p>
-        <% end %>
-      </div>
-      <p class="crop-plant-family"><em><%= @crop.plant_family %></em></p>
-    </div>
-    <div class="card-crops-show-white-container">
-      <h5>Needs</h5>
-      <div class="card-crops-show-bottom-details">
-        <p>Water:</p>
-        <p>Every <%= @crop.water_needs %> days</p>
-      </div>
-      <div class="card-crops-show-bottom-details">
-        <p>Nitrogen:</p>
-        <p><%= @crop.nitrogen_needs %></p>
-      </div>
-      <div class="card-crops-show-bottom-details">
-        <p>Sun Exposure:</p>
-        <% if @crop.sun_exposure == "Full Sun" %>
-          <p><i class="fas fa-sun"></i></p>
-        <% else %>
-          <p><i class="fas fa-cloud-sun"></i></p>
-        <% end %>
-      </div>
-      <div class="card-crops-show-bottom-details">
-        <p>Crop Spacing:</p>
-        <p><%= @crop.spacing_in_cm %> cm</p>
-      </div>
-      <div class="card-crops-show-bottom-details">
-        <p>Sowing Months:</p>
-        <p><%= @crop.sowing_months %></p>
-      </div>
-      <%#= this one should be another div with water use %>
-    </div>
-    <div class="card-crops-show-description">
-      <p><%= @crop.description %></p>
-    </div>
-    <%#= put recommended stuff together in another color %>
-    <%#= add the recommended sowing months as well %>
   </div>
+  <%= render 'shared/footer', favorite: @favorite_crops %>
 </div>
-<%= render 'shared/footer' %>
