--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -195,6 +195,9 @@ color: #ff6600 !important;
   border-radius: 16px;
   padding: 8px 16px;
   margin: 8px;
+  h3 {
+    margin-top: 8px;
+  }
 }
 
 .card-gardens-index-header {
@@ -302,11 +305,12 @@ color: #ff6600 !important;
 
 .card-garden-todo {
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   border-radius: 8px;
-  margin: 8px;
+  margin: 10px 20px;
   opacity: 0.9;
-
+  width: 280px;
+  justify-content: space-between;
   h3 {
     font-size: 1.4rem;
   }
@@ -318,25 +322,46 @@ color: #ff6600 !important;
   }
 
   p {
-    display: inline-block;
-    margin: 4px 8px;
-    text-align: right;
+    // display: inline-block;
+    margin: 16px 8px;
+    // text-align: right;
+    font-weight: bolder;
   }
 }
 
 .card-garden-todo-legend {
 
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-
-  i {
-    color: #b2c4ffd1;
+  // display: flex;
+  // justify-content: space-around;
+  // align-items: center;
+  position: relative;
+  height: 30px;
+  width: 330px;
+  // border: 1px solid red;
+  .water-needed {
+    position: absolute;
+    top: 1px;
+    left: 22px;
+    font-weight: bolder;
   }
-
+  .harvest-needed {
+    position: absolute;
+    right: 0px;
+    top: 1px;
+    font-weight: bolder;
+  }
+  i {
+  position: absolute;
+  top: 5px;
+  left: 6px;
+  color: #b2c4ffd1;
+}
 }
 
 #sickle {
+  position: absolute;
+  right: 93px;
+  top: -6px;
   height: 24px;
   width: 24px;
   border-radius: 50%;
