Added stimulus controller to a footer of the new garden

--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -2,6 +2,9 @@
   <% @gardens.each do |garden| %>
     <%= link_to garden_path(garden) do %>
       <div class="card-gardens-index">
+        <%= link_to new_garden_path do %>
+          <p>Start A New Garden</p>
+        <% end %>
         <div class="card-gardens-index-header">
           <div class="text-center">
             <h2><%= garden.location.split(',')[0].capitalize  %> Garden</h2>
