--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -12,7 +12,7 @@
       <%# Tile/plot edit widget %>
       <div class="form-container-gardens" data-tile-container-target="form">
         <%= simple_form_for [@garden, @plot] do |f| %>
-          <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Recommended" %>
+          <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Recommended", required: false %>
           <%= f.input :tiles, as: :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
           <%= f.submit "Create plot", class: 'btn btn-primary btn-gardens' %>
         <% end %>
