just uncommented height on gardens#show

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -47,7 +47,7 @@
   }
 }
 .container-garden-show-bg {
-  // height: 100vh;
+  height: 100vh;
   background: rgb(229,240,242);
   background: linear-gradient(360deg, rgba(229,240,242,1) 50%, rgba(163,239,255,1) 100%);
 }
