Comment out 3js file. Add styling.

--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -37,7 +37,7 @@
     <%= link_to (current_user.gardens.present? == true ? gardens_path : new_garden_path) do %>
       <div class="crop-container-img">
         <%= image_tag 'gardensindex', class: 'footer-img' %>
-        <div class="btn btn-primary footer-link">
+        <div class="btn btn-primary btn-shadow footer-link">
           <p class="footer-gardens-word">Gardens</p>
         </div>
       </div>
@@ -45,10 +45,9 @@
     <%= link_to crops_path do %>
       <div class="crop-container-img">
         <%= image_tag 'cropsindex', class: 'footer-img' %>
-        <div class="btn btn-primary footer-link">
+        <div class="btn btn-primary btn-shadow footer-link">
           <p class="footer-crops-word">Crops</p>
         </div>
-        <div class="favorite-counter" data-controller="mark-crops" data-mark-crops-target="button" data-mark-crops-num-value=<%= @favorites.count %>><%= @favorites.count if @favorites.count > 0 %></div>
       </div>
     <% end %>
   </div>
