--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,9 +1,9 @@
-.container {
-  height: 100vh;
-}
-
 .container-garden-perspective {
   perspective: 1000px;
+}
+
+.container-garden-index {
+  height: 100vh;
 }
 
 .container-info-widget {
@@ -12,7 +12,6 @@
   background-image: url(background-mint.png);
   background-size: contain;
   border-radius: 0 0 16px 16px;
-  box-shadow: 0 2px 4px $light-gray;
 }
 
 .container-temp-info {
