--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container container-garden-index">
   <%= link_to new_garden_path do %>
-    <p class="btn btn-primary w-100 gardens-index-start-button">Start A New Garden</p>
+    <p class="btn btn-primary btn-shadow w-100 gardens-index-start-button">Start A New Garden</p>
   <% end %>
   <%# <div data-controller="mark-crops"> %>
     <% @gardens.each do |garden| %>
@@ -50,7 +50,7 @@
     <%= link_to (current_user.gardens.present? == true ? gardens_path : new_garden_path) do %>
       <div class="crop-container-img">
         <%= image_tag 'gardensindex', class: 'footer-img' %>
-        <div class="btn btn-primary footer-link">
+        <div class="btn btn-primary btn-shadow footer-link">
           <p class="footer-gardens-word">Gardens</p>
         </div>
       </div>
@@ -58,7 +58,7 @@
     <%= link_to crops_path do %>
       <div class="crop-container-img">
         <%= image_tag 'cropsindex', class: 'footer-img' %>
-        <div class="btn btn-primary footer-link">
+        <div class="btn btn-primary btn-shadow footer-link">
           <p class="footer-crops-word">Crops</p>
         </div>
       </div>
