--- a/app/views/gardens/new.html.erb
+++ b/app/views/gardens/new.html.erb
@@ -1,20 +1,37 @@
-<div data-controller="mark-crops">
-  <div class="container">
-    <h2>Let's build your garden</h2>
-    <div>
-      <%= image_tag "measure.png", style: "width: 100%;"%>
-    </div>
-    <div class="card-nouyuu card-other-note">
-      <small>NOTE: Currently, <strong>only square or rectangular</strong> gardens are supported by this app. Gardens will display better if you assign the <strong>longest dimension</strong> of your garden to <strong>length</strong>.</small>
-    </div>
-    <div class="form-container-gardens">
-      <%= simple_form_for @garden do |f| %>
-        <%= f.input :location, label: "Where is your garden?", placeholder: "City" %>
-        <%= f.input :height, input_html: { type: "number", step: 0.5, min: 1, max: 10 },label: "LENGTH of your garden in meters:", placeholder: "Between 1 and 10 meters" %>
-        <%= f.input :width, input_html: { type: "number", step: 0.5, min: 1, max: 10 }, label: "WIDTH of your garden in meters:", placeholder: "Between 1 and 10 meters" %>
-        <%= f.submit "Build", class: "btn btn-primary btn-gardens" %>
-      <% end %>
-    </div>
+<div class="container">
+  <h2>Let's build your garden</h2>
+  <div>
+    <%= image_tag "measure.png", style: "width: 100%;"%>
   </div>
-  <%= render 'shared/footer', favorite: current_user.favorites_by_type('Crop').count %>
+  <div class="card-nouyuu card-other-note">
+    <small>NOTE: Currently, <strong>only square or rectangular</strong> gardens are supported by this app. Gardens will display better if you assign the <strong>longest dimension</strong> of your garden to <strong>length</strong>.</small>
+  </div>
+  <div class="form-container-gardens">
+    <%= simple_form_for @garden do |f| %>
+      <%= f.input :location, label: "Where is your garden?", placeholder: "City" %>
+      <%= f.input :height, input_html: { type: "number", step: 0.5, min: 1, max: 10 },label: "LENGTH of your garden in meters:", placeholder: "Between 1 and 10 meters" %>
+      <%= f.input :width, input_html: { type: "number", step: 0.5, min: 1, max: 10 }, label: "WIDTH of your garden in meters:", placeholder: "Between 1 and 10 meters" %>
+      <%= f.submit "Build", class: "btn btn-primary btn-gardens" %>
+    <% end %>
+  </div>
+</div>
+<div class="footer">
+  <div class="footer-links">
+    <%= link_to (current_user.gardens.present? == true ? gardens_path : new_garden_path) do %>
+      <div class="crop-container-img">
+        <%= image_tag 'gardensindex', class: 'footer-img' %>
+        <div class="btn btn-primary btn-shadow footer-link">
+          <p class="footer-gardens-word">Gardens</p>
+        </div>
+      </div>
+    <% end %>
+    <%= link_to crops_path do %>
+      <div class="crop-container-img">
+        <%= image_tag 'cropsindex', class: 'footer-img' %>
+        <div class="btn btn-primary btn-shadow footer-link">
+          <p class="footer-crops-word">Crops</p>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
