--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,7 +11,7 @@
     <%= link_to crops_path do %>
       <div class="crop-container-img">
         <%= image_tag 'cropsindex', class: 'footer-img' %>
-        <div class="btn btn-primary footer-link">
+        <div class="btn btn-primary btn-shadow footer-link">
           <p class="footer-crops-word">Crops</p>
         </div>
         <div class="favorite-counter" data-mark-crops-target="button" data-mark-crops-num-value=<%= favorite %>><%= favorite if favorite > 0 %></div>
