Fix margin on gardens#index.

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -244,10 +244,8 @@ color: #ff6600 !important;
   // justify-content: space-between;
   border-radius: 8px;
   background-color:  #b2c4ffd1;
-  margin: 10px 12px;
   opacity: 0.9;
-  width: 305px;
-  justify-content: space-between;
+  width: 100%;
   h3 {
     font-size: 1.4rem;
   }
