--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -12,7 +12,7 @@
       <%# Tile/plot edit widget %>
       <div class="form-container-gardens" data-tile-container-target="form">
         <%= simple_form_for [@garden, @plot] do |f| %>
-          <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Recommended", required: false %>
+          <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, prompt: @hardiness_recommendation[0].name, label: "Recommended", required: false %>
           <%= f.input :tiles, as: :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
           <%= f.submit "Plant Crops", class: 'btn btn-primary btn-gardens' %>
         <% end %>
@@ -24,7 +24,8 @@
   <%# Garden display %>
   <div class="container-for-container-garden-title">
     <div class="container-garden-in-between-title">
-      <h3>Select a Tile</h3><i class="fas fa-long-arrow-alt-down"></i>
+      <h3>Select a Tile</h3>
+      <i class="fas fa-long-arrow-alt-down"></i>
     </div>
   </div>
   <div class ="container-garden-perspective">
