Fix footer sticky position. Add min-height 100 vh to page containers.

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -3,7 +3,7 @@
 }
 
 .container-garden-index {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container-info-widget {
@@ -45,8 +45,8 @@
     display: inline-block;
   }
 }
-.container-garden-show-bg {
-  height: 100vh;
+.container-garden-show {
+  min-height: 100vh;
   background: rgb(229,240,242);
   background: linear-gradient(360deg, rgba(229,240,242,1) 50%, rgba(163,239,255,1) 100%);
 }
