--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container container-garden-show-bg" data-controller="tile-container">
+<div class="container container-garden-show" data-controller="tile-container">
   <%# Info widget %>
   <div class="container-info-widget">
     <div class="card-widget">
