--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background: $weak-yolk;
-  height: 100px;
+  // height: 100px;
   padding: 0px;
   color: rgba(0,0,0,0.3);
   margin-top: 16px;
